crates/secunit-cli/tests/snapshots/golden__scope_sca_post_retirement.snap
---
source: crates/secunit-cli/tests/golden.rs
expression: run_cli(&argv)
---
NAME                                     KIND             TAGS                                    
app-api                                  source_repo      production,customer-data,has-sca,has-sast
app-ui                                   source_repo      production,customer-data,has-sca,has-sast
