crates/secunit-cli/tests/snapshots/golden__status_evidence_never_run_human.snap
---
source: crates/secunit-cli/tests/golden.rs
expression: run_cli(&argv)
---
cp-annual-bcp-test (Annual)
  next due: 2026-08-01
  last run: — (NeverRun)
  evidence: no run on record
