crates/secunit-cli/tests/snapshots/golden__validate_clean_fixture.snap
---
source: crates/secunit-cli/tests/golden.rs
expression: run_cli(&argv)
---
✓ registry is valid
